# PlutoEngine

./: CMakeLists.txt
shaders/: axis.fs  axis.vs  shader.fs  shader.vs  shader_light.fs  shader_no_tex.vs  white.fs
src/: main.cpp
src/PlutoMath/: mat2.hpp  mat3.hpp  mat4.hpp  plutomath.hpp  projection.hpp  scalar_utils.hpp  transform.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_matrix_operations_checklist.txt
src/app/: window.cpp  window.hpp
src/input/: camera.hpp  input.cpp  input.hpp
src/render/: render.cpp  render.hpp  shader.hpp
src/scene/: scene.cpp  scene.hpp
src/util/: primativegenerator.cpp  primativegenerator.hpp  shader.hpp
